<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="preference_file">com.quebecfresh.androidapp.simplebudget.preference_file</string>
    <string name="initialize_done">com.quebecfresh.androidapp.simplebudget.initialize_done</string>
    <string name="initialize_account_done">com.quebecfresh.androidapp.simplebudget.initialize_account_done</string>
    <string name="initialize_income_budget_done">com.quebecfresh.androidapp.simplebudget.initialize_income_budget_done</string>
    <string name="initialize_expense_budget_done">com.quebecfresh.androidapp.simplebudget.initialize_expense_budget_done</string>
    <string name="initialize_date">com.quebecfresh.androidapp.simplebudget.initialize_date</string>

    <string name="app_name">123 Budget</string>
    <string name="menu_income">Incomes</string>
    <string name="menu_Expense">Expenses</string>
    <string name="menu_asset">Assets</string>
    <string name="menu_liability">Liabilities</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_expense">Expense</string>
    <string name="title_activity_payee">Choose Payee</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="view_transaction">View transaction</string>
    <string name="title_activity_add_expense">Add New Expense</string>
    <string name="textview_name">Name</string>
    <string name="button_save">Save</string>
    <string name="textview_category">Category</string>
    <string name="textview_payee">Payee</string>
    <string name="textview_paycycle">Pay Cycle</string>
    <string name="textview_amount">Amount</string>
    <string name="title_activity_edit_expense">Edit Expense</string>
    <string name="textview_note">Note</string>
    <string name="textview_duedate">Due Date</string>
    <string name="textview_paiddate">Paid Date</string>
    <string name="delete">Delete</string>
    <string name="title_activity_initialize_budget">Initialize Budget Activity</string>
    <string name="budget_start_date">Budget Start Date:</string>
    <string name="please_selected_incomes">Please selected incomes you will have</string>
    <string name="initialize_budget">Initialize Budget</string>
    <string name="expenses">Expenses</string>
    <string name="spend_money">Spend money</string>
    <string name="add_more_expense">Add more expense</string>
    <string name="accounts">Account</string>
    <string name="reports">Reports</string>
    <string name="expenses_budget">Expenses budget</string>
    <string name="incomes_budget">Incomes budgets</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="balance">Balance</string>
    <string name="note">Note</string>
    <string name="initialize_account">Initialize Account</string>
    <string name="reinitialize">Reinitialize</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="let_us_start">Let\'s start</string>
    <string name="welcome">Welcome</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="incomes">"Incomes"</string>
    <string name="edit_account">Edit Account</string>


    <string name="Cycle_Daily">Daily</string>
    <string name="Cycle_Weekly">Weekly</string>
    <string name="Cycle_Every_2_Weeks">Bi-weekly</string>
    <string name="Cycle_Monthly">Monthly</string>
    <string name="Cycle_Every_2_Months">Bi-monthly</string>
    <string name="Cycle_Every_3_Months">Quarterly</string>
    <string name="Cycle_Every_6_Months">Semi-yearly</string>
    <string name="Cycle_Yearly">Yearly</string>


    <string name="Income_Category_Group_Employment">Employment</string>
    <string name="Income_Category_Group_Government_Benefit">Government Benefit</string>
    <string name="Income_Category_Group_Investment">Investment</string>
    <string name="Income_Category_Group_Others">Others</string>
    <string name="edit_income">"Edit Income"</string>
    <string name="cycle">Cycle</string>
    <string name="budget_amount">Budget amount</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="first_how_much_you_have">First, how much you have?</string>
    <string name="you_have">You have</string>
    <string name="second_how_much_you_make">Second, how much you make?</string>

    <string name="third_how_you_want_to_spend">Third, how you want to spend?</string>
    <string name="you_will_spend">You will spend</string>
    <string name="category">Category</string>
    <string name="total_income">Total income</string>
    <string name="total_expense">Total expense</string>
    <string name="welcome_message">Welcome to 123 budget.\n Before you can start. \n Please choose 1,2 and 3. \n To initialize your budget.</string>
    <string name="welcome_budget_overview_message">Account Balance: %1$s $. \nYearly income: %2$s $ \nYearly expense: %3$s $ \nYearly surplus:%4$s $</string>
    <string name="build_your_budget">Build your budget</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="roll_over">Rollover</string>
    <string name="what_is_this">What\'s this</string>
    <string name="ok">OK</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>



    <string name="what_is_roll_over_title">If you choose "Rollover"</string>
    <string name="what_is_roll_over">You have a 50$ Weekly budget.\nFirst week will start with 50$. \nYou spend 30$, 20$ left.\nNext week will start with 20$ + 50$ = 70$.\nIt rollover minus(-20$) too</string>
    <string name="choose_date">Choose date</string>
    <string name="pocket">Pocket</string>
    <string name="choose_pocket">Choose Pocket</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="unused_balance">Unused Balance</string>
    <string name="unused_budget">Unused budget</string>
    <string name="unrealized_budget">Unrealized budget</string>
    <string name="input_expense_name">Input Expense Name</string>
    <string name="receive_money">"Receive money"</string>
    <string name="choose_account">Choose account</string>
    <string name="title_activity_income">Incomes</string>
    <string name="income_budget">Income Budget</string>
    <string name="expense_budget">Expense Budget</string>
    <string name="over_view">Overview</string>
    <string name="title_activity_balance">Balance</string>
    <string name="total">Total</string>
    <string name="title_activity_account">Accounts</string>
    <string name="title_activity_expense_budget">ExpenseBudget</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_can_not_undo">Delete can not undo</string>
    <string name="are_you_sure">Are you sure?</string>

    <string name="toast_name_is_required">Name is required</string>
    <string name="toast_number_is_required">Number is required</string>
    <string name="toast_balance_have_to_be_numeric">Balance have to be numeric</string>
    <string name="toast_amount_is_required">Amount is required</string>
    <string name="toast_amount_have_to_be_numeric">Amount have to be numeric</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_account">Name  of account</string>
    <string name="number_of_account">Number of account</string>
    <string name="balance_of_account">Balance of account</string>
    <string name="note_of_account">Note of account</string>
    <string name="start_date">Start Date</string>
    <string name="title_activity_budget_review">Review your budget</string>
    <string name="budget_cycle">Budget cycle</string>
    <string name="your_income">Your income</string>
    <string name="your_expense">Your expense</string>
    <string name="your_surplus">Your suplus</string>
    <string name="title_activity_budget_overview">Budget Overview</string>
    <string name="budget_overview">Budget Overview</string>
    <string name="most_recent_transactions">Most recent transactions</string>
    <string name="title_activity_income_budget">Income Budget</string>
    <string name="yes_start_live_on_this_budget">Yes, start live on this budget</string>
    <string name="no_continue_fine_tune_my_budget">No, continue fine tune my budget</string>
    <string name="used_amount">Used amount</string>
    <string name="since">Since</string>
    <string name="budget">Budget</string>
    <string name="title_activity_edit_budget_info">Edit Budget Information</string>
    <string name="budget_name">Budget name</string>
    <string name="budget_name_hint">eg. Austere;Flexible;Generous.</string>
    <string name="budget_end_date">Budget end date</string>
    <string name="end_date">End date</string>
    <string name="begin_date">Begin date</string>
    <string name="budget_begin_date">Budget begin date</string>


</resources>
