<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_reInitialize" android:title="@string/reinitialize"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_accounts" android:title="@string/accounts"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_reports" android:title="@string/reports"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_expense_budget" android:title="@string/expenses_budget"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_income_budget" android:title="@string/incomes_budget"
        android:orderInCategory="100" app:showAsAction="ifRoom" />




    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
