<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.quebecfresh.androidapp.simplebudget.EditIncomeBudgetActivity">


    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/name"
            android:id="@+id/textViewName"
            style="@style/detailFirstColumnStyle" />

        <EditText
            android:id="@+id/editTextName"
            style="@style/detailSecondColumnEditTextStyle" />
    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/accounts"
            android:id="@+id/textView5"
            style="@style/detailFirstColumnStyle" />

        <Button
            android:text="@string/accounts"
            android:id="@+id/buttonAccount"
            style="@style/detailSecondColumnButtonStyle"
            android:onClick="chooseIncomeAccount" />
    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/category"
            android:id="@+id/textViewCategory"
            style="@style/detailFirstColumnStyle" />

        <Spinner
            android:id="@+id/spinnerGroup"
            style="@style/detailSecondColumnSpinnerStyle" />
    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/cycle"
            android:id="@+id/textViewCycle"
            style="@style/detailFirstColumnStyle" />

        <Spinner
            android:id="@+id/spinnerCycle"
            style="@style/detailSecondColumnSpinnerStyle" />

    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/budget_amount"
            android:id="@+id/textViewAmount"
            style="@style/detailFirstColumnStyle" />

        <EditText
            android:id="@+id/editTextAmount"
            style="@style/detailSecondColumnEditTextStyle"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/note"
            android:id="@+id/textView9"
            style="@style/detailFirstColumnStyle" />

        <EditText
            android:id="@+id/editTextNote"
            style="@style/detailSecondColumnEditTextStyle" />
    </LinearLayout>

</LinearLayout>
