<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/detailStyle"
    tools:context="com.quebecfresh.androidapp.simplebudget.EditExpenseBudgetActivity">

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/name"
            android:id="@+id/textViewName"
            style="@style/detailFirstColumnStyle"/>

        <EditText
            android:id="@+id/editTextName"
            style="@style/detailSecondColumnEditTextStyle"/>

    </LinearLayout>


    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/accounts"
            android:id="@+id/textView2"
            style="@style/detailFirstColumnStyle"/>

        <Button
            android:text="Account"
            android:id="@+id/buttonAccount"
            android:onClick="chooseAccount"
            style="@style/detailSecondColumnButtonStyle"/>

    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/category"
            android:id="@+id/textView10"
            style="@style/detailFirstColumnStyle"/>

        <Spinner
            android:id="@+id/spinnerExpenseBudgetCategory"
            style="@style/detailSecondColumnSpinnerStyle"/>
    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/cycle"
            android:id="@+id/textViewCycle"
            style="@style/detailFirstColumnStyle"/>

        <Spinner
            android:id="@+id/spinnerCycle"
            style="@style/detailSecondColumnSpinnerStyle"/>
    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Budget Date"
            android:id="@+id/textViewBudgetDate"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="calFillAmount" />
    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/budget_amount"
            android:id="@+id/textViewBudgetAmount"
            style="@style/detailFirstColumnStyle"/>

        <EditText
            android:id="@+id/editTextBudgetAmount"
            style="@style/detailSecondColumnEditTextStyle"/>
    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/roll_over"
            android:id="@+id/textView"
            style="@style/detailFirstColumnStyle"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/roll_over"
                android:id="@+id/checkBoxRollover"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="10" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="\?"
                android:id="@+id/buttonWhatisthis"
                android:layout_gravity="center_vertical|right"
                android:onClick="showWhatIsRollover"
                android:layout_weight="10" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="@string/note"
            android:id="@+id/textViewNote"
            style="@style/detailFirstColumnStyle"/>

        <EditText
            android:id="@+id/editTextNote"
            style="@style/detailSecondColumnEditTextStyle"/>
    </LinearLayout>


</LinearLayout>
