<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.quebecfresh.androidapp.simplebudget.EditAccountActivity"
    android:orientation="vertical">

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="Name"
            android:id="@+id/textView4"
            style="@style/detailFirstColumnStyle"/>

        <EditText
            android:id="@+id/editTextName"
            android:hint="@string/name_of_account"
            style="@style/detailSecondColumnEditTextStyle"/>

    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="Number"
            android:id="@+id/textView6"
            style="@style/detailFirstColumnStyle"/>

        <EditText
            android:id="@+id/editTextNumber"
            android:hint="@string/number_of_account"
            style="@style/detailSecondColumnEditTextStyle"/>

    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="Balance"
            android:id="@+id/textView7"
            style="@style/detailFirstColumnStyle"/>

        <EditText
            android:id="@+id/editTextBalance"
            android:hint="@string/balance_of_account"
            style="@style/detailSecondColumnEditTextStyle"/>

    </LinearLayout>

    <LinearLayout style="@style/detailRowStyle">

        <TextView
            android:text="Note"
            android:id="@+id/textView8"
            style="@style/detailFirstColumnStyle"/>

        <EditText
            android:id="@+id/editTextNote"
            android:hint="@string/note_of_account"
            style="@style/detailSecondColumnEditTextStyle"/>

    </LinearLayout>
</LinearLayout>
