<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.quebecfresh.androidapp.simplebudget.EditBudgetInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView7"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/linearLayoutInsideScrollView"
            android:focusableInTouchMode="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/budget_name"
                    android:layout_weight="10"
                    android:gravity="bottom" />

                <EditText android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/editText"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:hint="@string/budget_name_hint"
                    android:gravity="left|center_vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="20" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:text="@string/start_date"
                    android:id="@+id/textView21"
                    android:gravity="bottom" />

                <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:text="@string/budget_start_date"
                    android:id="@+id/button4" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:text="@string/end_date"
                    android:id="@+id/textView25"
                    android:gravity="bottom" />

                <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:text="@string/budget_end_date"
                    android:id="@+id/button5" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:text="@string/note"
                    android:id="@+id/textView26"
                    android:gravity="bottom" />

                <EditText android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:imeOptions="actionDone"
                    android:id="@+id/editText2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
