<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.quebecfresh.androidapp.simplebudget.AddExpenseActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/button_save"
        android:layout_gravity="center"
        android:layout_weight="10" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="90">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textview_name"
                android:id="@+id/textView_name"
                android:layout_weight="10"
                android:gravity="center_vertical|right"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_weight="90"
                android:layout_gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_category"
                android:id="@+id/textView_Category"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:gravity="center_vertical|right" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_weight="90"
                android:gravity="center_vertical"
                android:layout_gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textview_payee"
                android:id="@+id/textView_Payee"
                android:layout_gravity="center"
                android:gravity="center_vertical|right"
                android:layout_weight="10" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_weight="90"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:onClick="choosePayee" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textview_paycycle"
                android:id="@+id/textView"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:gravity="center_vertical|right" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:layout_weight="90"
                android:layout_gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textview_amount"
                android:id="@+id/textView_Amount"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:gravity="center_vertical|right" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText5"
                android:layout_gravity="center"
                android:layout_weight="90" />
        </TableRow>

    </TableLayout>

</LinearLayout>
